--- a/front-end/src/styles/navbar.css
+++ b/front-end/src/styles/navbar.css
@@ -1,1 +1,7 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css";
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
