--- a/front-end/src/styles/products.css
+++ b/front-end/src/styles/products.css
@@ -12,6 +12,8 @@
   margin: 0 auto;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
+  justify-content: center;
 }
 
 .card-products {
