--- a/front-end/src/styles/resgister.css
+++ b/front-end/src/styles/resgister.css
@@ -22,12 +22,13 @@
   flex-direction: column;
   padding: 30px;
   width: 400px;
-  height: 350px;
+  height: auto;
 }
 
 .form-content {
   display: flex;
   flex-direction: column;
+  margin-top: 10px;
 }
 
 .input-general {
