--- a/front-end/src/styles/resgister.css
+++ b/front-end/src/styles/resgister.css
@@ -58,10 +58,18 @@
   width: 250px;
 }
 
+.buttons {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .user-email, h3 {
   margin-right: 20px;
   margin-left: 15px;
-  margin-top: -10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .btn-add-cart {
